@@ -1,3 +1,10 @@
+Sat Jul 19 08:53:40 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * cuts/utils/logging/TestLoggerClient_i.cpp:
+
+	  . Bug fix where the TestLoggerFactory objects were not being 
+	    activated in the correct POA.
+
 Sat Jul 19 01:24:41 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * cuts/utils/logging/TestLoggerClient_i.h:
